retrofit to zen libs; cleanup